Fix rank selection menu placement on mobile

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -474,6 +474,14 @@
         align-items: center;
         gap: 0.5rem;
     }
+
+    .opponent-rank-container {
+        .ogs-react-select__menu {
+            right: 0;
+            width: 6rem;
+            max-width: 40vw;
+        }
+    }
 }
 
 .PlayButton-container {
